Fix speakers table and schedule on mobile

--- a/src/base/2018-orlando.css
+++ b/src/base/2018-orlando.css
@@ -1749,18 +1749,21 @@ body:not(.twentyseventeen-front-page) .entry-header {
 }
 
 /*organizers*/
-.wcorg-organizers .wcorg-organizer .wcorg-organizer-description {
+.wcorg-organizers .wcorg-organizer .wcorg-organizer-description,
+.wcorg-speakers .wcorg-speaker .wcorg-speaker-description{
   position: relative;
   padding-left: 120px;
   padding-bottom: 30px;
   min-height: 140px;
 }
 
-.wcorg-organizers .wcorg-organizer .wcorg-organizer-description p:last-child {
+.wcorg-organizers .wcorg-organizer .wcorg-organizer-description p:last-child,
+.wcorg-speakers .wcorg-speaker .wcorg-speaker-description p:last-child {
   margin-bottom: 0;
 }
 
-.wcorg-organizers .wcorg-organizer .wcorg-organizer-description .avatar {
+.wcorg-organizers .wcorg-organizer .wcorg-organizer-description .avatar,
+.wcorg-speakers .wcorg-speaker .wcorg-speaker-description .avatar {
   margin-right: 25px;
   width: 96px;
   height: 96px;
@@ -3606,14 +3609,6 @@ body.home .container.marginbottom0 {
   display: none;
 }
 
-.wcorg-speakers {
-  display: grid;
-  grid-template-columns: repeat(2,50%);
-  grid-column-gap: 50px;
-  justify-items: stretch;
-  align-items: start;
-}
-
 .wcorg-speaker,
 .wcorg-organizer {
   margin-top: 0;
@@ -3622,44 +3617,6 @@ body.home .container.marginbottom0 {
 div.wcorg-speaker h2, div.wcorg-organizer h2 {
   margin-top: 1em !important;
   margin-bottom: .5em;
-}
-
-.wcorg-speaker-description img.emoji,
-.wcorg-session-description img.emoji {
-  float: none;
-}
-
-@media screen and (max-width: 768px) {
-  .wcorg-speakers,
-  .wcorg-organizers {
-    grid-template-columns: 100%;
-  }
-
-  .attachment-wcb-sponsor-logo-horizontal-2x {
-    margin-top: 20px;
-  }
-}
-
-@media screen and (max-width: 62rem) {
-  body.home ul.wp-block-latest-posts.aligncenter.is-grid.columns-3.container {
-    padding-left: 15px !important;
-    padding-right: 15px !important;
-  }
-}
-
-@media screen and (min-width: 48em) {
-  .page-two-column .panel-content .entry-content {
-    float: none !important;
-    width: auto !important;
-  }
-}
-
-.page-id-1756 .wcorg-speaker-description p {
-  display: none;
-}
-
-.page-id-1756 .wcorg-speaker-description .avatar {
-  border-radius: 0;
 }
 
 .sponsor-logos img {
